<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <TextView
            android:id="@+id/frgament_second_home_tiltletv"
            android:textSize="20sp"
            android:text="中国小老板掌握美国大秘密!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/fragment_second_home_image"
                android:src="@mipmap/nianqingren"
                android:layout_width="wrap_content"
                android:layout_height="100dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="#FF00"
                android:layout_marginLeft="9dp"
                android:text="@string/joke1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="9dp"
                android:id="@+id/textView3" />
            <TextView
                android:id="@+id/fragment_second_home_xihuan"
                style="@style/button"
                android:text="@string/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="29dp"
                android:layout_marginEnd="29dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/fragment_second_home_fenxiang"
                android:layout_alignParentBottom="true" />
            <TextView
                android:id="@+id/fragment_second_home_fenxiang"
                android:gravity="center"
                android:text="@string/delete"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="22dp"
                android:layout_marginEnd="22dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </LinearLayout>

<View
    android:background="@color/bg_color_gray"
    android:layout_width="match_parent"
    android:layout_height="5dp"></View>
</LinearLayout>