<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.v7.widget.Toolbar
    android:background="@color/bg_color_gray"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/picture_fanhui"
            android:textColor="@color/dark_blue"
            android:textSize="15sp"
            android:text="@string/returns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.v7.widget.Toolbar>
    <!--<ImageView
        android:id="@+id/activity_picture_image"
        android:src="@mipmap/meinv3"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--<android.support.v4.widget.NestedScrollView
            android:id="@+id/activity_picture_sll"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">-->
            <android.support.v7.widget.RecyclerView
                android:background="@color/text_size_normal"
                android:id="@+id/activity_picture_rcv"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>
       <!-- </android.support.v4.widget.NestedScrollView>-->

        <LinearLayout
            android:background="@color/result_minor_text"
            android:visibility="gone"
            android:id="@+id/activity_picture_pop"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/sharepop_image"
                android:layout_weight="1"
                android:layout_width="200dp"
                android:layout_height="150dp" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="150dp">
                <Button
                    android:layout_marginTop="12dp"
                    android:id="@+id/sharepop_sharebtn"
                    android:text="@string/sent_directly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_marginTop="42dp"
                    android:id="@+id/sharepop_downbtn"
                    android:text="@string/collection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>