<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:background="#FFF"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <android.support.design.widget.CollapsingToolbarLayout
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="250dp">
            <LinearLayout
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="250dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                    <ImageView
                        android:src="@mipmap/icon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imageView"
                        android:layout_marginBottom="28dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />
                    <TextView
                        android:textSize="18sp"
                        android:text="@string/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginStart="30dp"
                        android:layout_alignTop="@+id/imageView"
                        android:layout_toRightOf="@+id/imageView"
                        android:layout_toEndOf="@+id/imageView"
                        android:layout_marginTop="19dp"
                        android:id="@+id/textView2" />
                    <TextView
                        android:text="@string/user_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView"
                        android:layout_below="@+id/textView2"
                        android:layout_alignLeft="@+id/textView2"
                        android:layout_alignStart="@+id/textView2" />
                </RelativeLayout>
                <android.support.design.widget.TabLayout
                    android:background="@color/divider2"
                    app:tabTextColor="#000000"
                    android:id="@+id/fragmen_four_tb"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                </android.support.design.widget.TabLayout>
            </LinearLayout>
            <android.support.v7.widget.Toolbar
                android:background="@color/status_wait"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
                <TextView
                    android:text="@string/personal_center"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v4.view.ViewPager
            android:id="@+id/fragmen_four_vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v4.view.ViewPager>
    </android.support.v4.widget.NestedScrollView>

    <!--<ImageView
        android:src="@mipmap/meinv3"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />-->
</android.support.design.widget.CoordinatorLayout>